Refactor CSS for responsive design and add grammar link to navigation + adding a lot of words

--- a/style/default.scss
+++ b/style/default.scss
@@ -30,7 +30,7 @@ menu {
   font-size: 1.5em;
   padding: 1em;
   height: $menu-height;
-  width: 100vw;
+  width: 100%;
 
   ul {
     display: flex;
